# python-textutils

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WORK-FLOW-GUIDE.md  main.py  pyproject.toml
tests/: test_cleaner.py
textutils/: __init__.py  analyzer.py  cleaner.py
